<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

	<ImageView android:layout_width="match_parent"
		android:layout_height="match_parent" android:contentDescription="@string/content_description"
		android:background="#f6e7c3" android:scaleType="centerCrop" />


<RelativeLayout android:layout_width="match_parent"
		android:layout_height="match_parent" tools:context="${packageName}.${activityClass}">


		<!-- Image Size -->
		<LinearLayout android:id="@+id/ll_big" android:layout_marginTop="15dp"
		    android:layout_alignParentLeft="true" android:layout_alignParentTop="true"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<LinearLayout android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:orientation="horizontal">

				<TextView android:id="@+id/tv_is" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_marginLeft="20dp"
					android:layout_gravity="center_vertical"
					android:text="@string/imagesize" />
			</LinearLayout>

			<RadioGroup android:id="@+id/rgroup" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_alignTop="@id/tv_is"
				android:layout_toRightOf="@id/tv_is" android:layout_marginTop="-5dp"
				 android:layout_gravity="center_vertical"
				android:orientation="horizontal">

				<RadioButton android:id="@+id/rb1" android:layout_width="wrap_content" android:tag="1"
					android:layout_marginLeft="10dp" android:layout_height="wrap_content"
					android:text="icon" />
				<RadioButton android:id="@+id/rb2" android:layout_width="wrap_content" android:tag="2"
					android:layout_marginLeft="10dp" android:layout_height="wrap_content"
					android:text="regular" />
				<RadioButton android:id="@+id/rb3" android:layout_width="wrap_content" android:tag="3"
					android:layout_marginLeft="10dp" android:layout_height="wrap_content"
					android:text="bigger" />
				<RadioButton android:id="@+id/rb4" android:layout_width="wrap_content" android:tag="4"
					android:layout_marginLeft="10dp" android:layout_height="wrap_content"
					android:text="huge" />
				<RadioButton android:id="@+id/rb5" android:layout_width="wrap_content" android:tag="5"
					android:layout_marginLeft="10dp" android:layout_height="wrap_content"
					android:text="all" />
				
			</RadioGroup>
		</LinearLayout>


		<!-- Image Color -->
		<TextView android:id="@+id/tv_color" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_margin="20dp"
			android:layout_alignParentLeft="true" android:layout_below="@id/ll_big"
			android:text="@string/color" />
		<Spinner
		    android:id="@+id/spincolor"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_margin="10dp"
			android:layout_toRightOf="@id/tv_color" android:layout_below="@id/ll_big" />
		
		<!-- Image Type -->
		<TextView android:id="@+id/tv_imagetype"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_margin="20dp" android:layout_alignParentLeft="true"
			android:layout_below="@id/tv_color" android:text="@string/imagetype" />

	    <Spinner
		    android:id="@+id/spintype"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_margin="10dp"
			android:layout_toRightOf="@id/tv_imagetype" android:layout_below="@id/tv_color" />
		
				
		<!-- Site to get images from -->
		<TextView android:id="@+id/tv_site" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_margin="20dp"
			android:layout_alignParentLeft="true" android:layout_below="@id/tv_imagetype"
			android:text="@string/site" />

	    <EditText android:id="@+id/et_site" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_margin="10dp" 
			android:layout_toRightOf="@id/tv_site" android:layout_below="@id/tv_imagetype"
			android:hint="@string/site" />
	 	    
		
		<!-- Save button -->

		<ImageButton android:layout_centerHorizontal="true" android:id="@+id/save"
		    android:onClick="returnSettings"   android:imeOptions="actionDone"
		       android:singleLine="true"
			android:src="@drawable/save" android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true" android:layout_margin="20dp"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:contentDescription="@string/content_description"
			android:text="@string/save" />

	</RelativeLayout>
</FrameLayout>